--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">RestaurantTemplate</string>
+    <string name="app_name">Restaurant Template</string>
     <string name="action_settings">Settings</string>
     
     <string name="restuarant_name">Restaurant Name</string>
@@ -9,11 +9,14 @@
     <string name="about_us_text">About Us</string>
     <string name="special_offers_text">Special Offers</string>
     <string name="place_an_order">Place An Order</string>
+    <string name="directions_text">Directions</string>
     
     <string name="menu_title">Menu Title</string>
     
     <string name="menu_label">Menu</string>
     <string name="about_label">About Us</string>
+    
+    
     
     
     
