in the middle of creating the checkout menu

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,6 +16,10 @@
     <string name="menu_label">Menu</string>
     <string name="about_label">About Us</string>
     
+    <string name="added_to_order_toast">Added To Order</string>
+    
+    <string name="checkout">Checkout</string>
+    
     
     
     
