--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="menu_text">Menu</string>
     <string name="about_us_text">About Us</string>
     <string name="special_offers_text">Special Offers</string>
-    <string name="place_an_order">Place An Order</string>
+    <string name="call_us_text">Call Us</string>
     <string name="directions_text">Directions</string>
     
     <string name="menu_title">Menu Title</string>
