--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="restuarant_name">Restaurant Name</string>
     <string name="menu_text">Menu</string>
     <string name="about_us_text">About Us</string>
-    <string name="special_offers_text">Special Offers</string>
+    <string name="special_offers_text">Offers</string>
     <string name="call_us_text">Call Us</string>
     <string name="directions_text">Directions</string>
     
